--- a/0720/practice1.ipynb
+++ b/0720/practice1.ipynb
@@ -88,6 +88,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "votes = ['Kim', 'Lee', 'Park','Kim', 'Kim', 'Lee', 'Park', 'Lee']\n",
+    "cnt = 0\n",
+    "for vote in votes:\n",
+    "    if vote == 'Lee':\n",
+    "        cnt += 1\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "votes = ['Kim', 'Lee', 'Park','Kim', 'Kim', 'Lee', 'Park', 'Lee']\n",
+    "cnt = 0\n",
+    "for idx in range(len(votes)):\n",
+    "    if votes[idx] == 'Lee':\n",
+    "        cnt += 1\n",
+    "print(cnt)"
+   ]
+  },
+  {
    "source": [
     "### 최대/최소 구하기\n",
     "- 주어진 리스트 요소 중 최댓값/최솟값을 출력하시오."
@@ -112,6 +140,83 @@
     "import numpy as np\n",
     "num_list = np.random.randint(1,101,5)\n",
     "print(max(num_list), min(num_list), sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최댓값\n",
+    "numbers = [7, 10, 22, 4, 3, 17]\n",
+    "\n",
+    "# 문제에 양수만 있을 때\n",
+    "# 문제에 음수만으로 구성된 리스트가 존재하면 0으로 초기화 할시 틀리게 된다.\n",
+    "max_num = 0\n",
+    "\n",
+    "for num in numbers:\n",
+    "    if num > max_num:\n",
+    "        max_num = num\n",
+    "print(max_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최솟값\n",
+    "numbers = [7, 10, 22, 4, 3, 17]\n",
+    "\n",
+    "min_num = 987654321\n",
+    "\n",
+    "for num in numbers:\n",
+    "    if num < min_num:\n",
+    "        min_num = num\n",
+    "print(min_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최댓값과 등장 횟수 구하기\n",
+    "numbers = [7, 10, 22, 7, 22, 22]\n",
+    "max_num = numbers[0]\n",
+    "cnt = 1\n",
+    "for num in numbers:\n",
+    "    if num == max_num:\n",
+    "        cnt += 1\n",
+    "    elif num < max_num:\n",
+    "        continue\n",
+    "    else:\n",
+    "        cnt = 1\n",
+    "        max_num = num\n",
+    "print(max_num, cnt,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [7, 10, 22, 7, 22, 22]\n",
+    "\n",
+    "max_num = numbers[0]\n",
+    "cnt = 1\n",
+    "\n",
+    "for i in range(1, len(numbers)):\n",
+    "    if numbers[i] > max_num:\n",
+    "        max_num = numbers[i]\n",
+    "        cnt += 1\n",
+    "    elif numbers[i] == max_num:\n",
+    "        cnt += 1\n",
+    "print(max_num, cnt)"
    ]
   },
   {
@@ -156,6 +261,31 @@
    "source": [
     "word = 'apple'\n",
     "print(''.join(w for w in word if w != 'a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "pple\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'apple'\n",
+    "\n",
+    "result = ''\n",
+    "\n",
+    "for w in word:\n",
+    "    if w != 'a':\n",
+    "        result += w\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
@@ -207,7 +337,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word = input()\n",
+    "\n",
+    "# 아래에 코드를 작성하시오.\n",
+    "\n",
+    "for i in range(len(word)-1, -1, -1):\n",
+    "    print(word[i], end='')\n",
+    "\n",
+    "# 반복문을 그대로 순회하면서\n",
+    "# word[i] + result\n",
+    "\n",
+    "# reversed + join\n",
+    "\n",
+    "# [::-1]\n",
+    "\n",
+    "# swap"
+   ]
   }
  ]
 }
