--- a/0720/practice1.ipynb
+++ b/0720/practice1.ipynb
@@ -89,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "votes = ['Kim', 'Lee', 'Park','Kim', 'Kim', 'Lee', 'Park', 'Lee']\n",
     "cnt = 0\n",
@@ -103,9 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "votes = ['Kim', 'Lee', 'Park','Kim', 'Kim', 'Lee', 'Park', 'Lee']\n",
     "cnt = 0\n",
@@ -125,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "94\n32\n"
+      "86\n34\n"
      ]
     }
    ],
@@ -144,9 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "# 최댓값\n",
     "numbers = [7, 10, 22, 4, 3, 17]\n",
@@ -163,9 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 최솟값\n",
     "numbers = [7, 10, 22, 4, 3, 17]\n",
@@ -180,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "22 3\n"
+     ]
+    }
+   ],
    "source": [
     "# 최댓값과 등장 횟수 구하기\n",
     "numbers = [7, 10, 22, 7, 22, 22]\n",
@@ -201,9 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "22 3\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [7, 10, 22, 7, 22, 22]\n",
     "\n",
@@ -213,7 +261,7 @@
     "for i in range(1, len(numbers)):\n",
     "    if numbers[i] > max_num:\n",
     "        max_num = numbers[i]\n",
-    "        cnt += 1\n",
+    "        cnt = 1\n",
     "    elif numbers[i] == max_num:\n",
     "        cnt += 1\n",
     "print(max_num, cnt)"
@@ -229,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -334,11 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "elppa"
+     ]
+    }
+   ],
    "source": [
-    "word = input()\n",
+    "word = 'apple'\n",
     "\n",
     "# 아래에 코드를 작성하시오.\n",
     "\n",
