--- a/0726/string.ipynb
+++ b/0726/string.ipynb
@@ -348,7 +348,8 @@
     "## 문자열 변경\r\n",
     "> **.replace(old, new[, count])**\r\n",
     "- 바꿀 대상 글자를 새로운 글자로 바꿔서 반환\r\n",
-    "- 선택적 인자 count를 지정하면, 해당 개수만큼만 시행"
+    "- 선택적 인자 count를 지정하면, 해당 개수만큼만 시행\r\n",
+    "- 원본은 바뀌지 않는다"
    ],
    "metadata": {}
   },
