--- a/0727/list_practice1.ipynb
+++ b/0727/list_practice1.ipynb
@@ -3,48 +3,34 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Practice 1\n",
-    "\n",
-    "> 복잡한 자료구조의 (2차원 리스트) 반복문"
+    "# Practice 1\r\n",
+    "\r\n",
+    "- 복잡한 자료구조의 (2차원 리스트) 반복문"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## 복잡한 리스트의 합\n",
-    "\n",
-    "> 2차원 리스트를 반복하는 방법을 알아봅시다. \n",
-    "\n",
-    "\n",
-    "* 주어진 아래의 리스트를 반복하여 숫자의 합을 반환하시오.\n",
-    "\n",
-    "---\n",
-    "**예시 입력**\n",
-    "\n",
-    "```python\n",
-    "numbers = [\n",
-    "    [1, 4],\n",
-    "    [10, 5],\n",
-    "    [20, 30]    \n",
-    "]\n",
-    "\n",
-    "```\n",
-    "\n",
-    "**예시 출력**\n",
-    "```python\n",
-    "sum_list([[1, 4], [10, 5], [20, 30]]) # 70\n",
-    "```"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### for 문을 활용하여 풀이하기\n",
-    "\n",
-    "```python\n",
-    "for element in list:\n",
+    "## 1. 복잡한 리스트의 합\r\n",
+    "- 주어진 아래의 리스트를 반복하여 숫자의 합을 반환하시오.\r\n",
+    "\r\n",
+    "---\r\n",
+    "**[예시 입력]**\r\n",
+    "\r\n",
+    "```python\r\n",
+    "numbers = [\r\n",
+    "    [1, 4],\r\n",
+    "    [10, 5],\r\n",
+    "    [20, 30]    \r\n",
+    "]\r\n",
+    "\r\n",
+    "sum_list(numbers)\r\n",
+    "```\r\n",
+    "\r\n",
+    "**예시 출력**\r\n",
+    "```python\r\n",
+    "# 70\r\n",
     "```"
    ],
    "metadata": {}
@@ -53,7 +39,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# 아래에 코드를 작성하세요.\r\n",
+    "numbers = [\r\n",
+    "    [1, 4],\r\n",
+    "    [10, 5],\r\n",
+    "    [20, 30]\r\n",
+    "    ]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> for문을 활용한 풀이"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
     "def sum_list(numbers):\r\n",
     "    total = 0\r\n",
     "    for number in numbers:\r\n",
@@ -67,7 +72,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# 아래에 코드를 작성하세요.\r\n",
     "def sum_list(numbers):\r\n",
     "    total = 0\r\n",
     "    for number in numbers:\r\n",
@@ -82,7 +86,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "print(sum_list([[1, 4], [10, 5], [20, 30]]))"
+    "print(sum_list(numbers))"
    ],
    "outputs": [
     {
@@ -98,19 +102,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Index로 접근하여 풀이하기\n",
-    "\n",
-    "```python\n",
-    "for element in range(len(list)):\n",
-    "```"
+    "> Index로 접근하여 풀이"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
-    "# 아래에 코드를 작성하세요.\r\n",
     "def sum_list_index(numbers):\r\n",
     "    total = 0\r\n",
     "    for m in range(len(numbers)):\r\n",
@@ -123,9 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "source": [
-    "print(sum_list_index([[1, 4], [10, 5], [20, 30]]))"
+    "print(sum_list_index(numbers))"
    ],
    "outputs": [
     {
@@ -141,19 +140,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### while 문을 활용하여 풀이하기\n",
-    "\n",
-    "```python\n",
-    "while ____:\n",
-    "```"
+    "> while문을 활용한 풀이"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "source": [
-    "## 아래에 코드를 작성하세요.\r\n",
     "def sum_list_while(numbers):\r\n",
     "    cnt = 0\r\n",
     "    total = 0\r\n",
@@ -169,9 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "source": [
-    "print(sum_list_while([[1, 4], [10, 5], [20, 30]]))"
+    "print(sum_list_while(numbers))"
    ],
    "outputs": [
     {
@@ -187,59 +181,43 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 시험 점수\n",
-    "\n",
-    "> 2차원 배열\n",
-    "\n",
-    "\n",
-    "* A반 학생들의 점수는 아래와 같고, students 리스트에 저장되어 있다.\n",
-    "\n",
-    "    * A학생(국어 100점, 수학 80점, 영어 100점)\n",
-    "    * B학생(국어 90점, 수학 90점, 영어 60점)\n",
-    "    * C학생(국어 80점, 수학 80점, 영어 80점)\n",
-    "\n",
-    "```python\n",
-    "students = [\n",
-    " [100, 80, 100],\n",
-    " [90, 90, 60],\n",
-    " [80, 80, 80]\n",
-    "]\n",
-    "```"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 학생별 출력\n",
-    "\n",
-    "* 아래의 리스트를 반복하여 **학생별 총합**을 순서대로 `출력`하시오.\n",
-    "\n",
-    "* `sum` 함수 사용 금지\n",
-    "\n",
-    "---\n",
-    "**예시 입력**\n",
-    "\n",
-    "```python\n",
-    "students = [\n",
-    " [100, 80, 100],\n",
-    " [90, 90, 60],\n",
-    " [80, 80, 80]\n",
-    "]\n",
-    "```\n",
-    "\n",
-    "**예시 출력**\n",
-    "```\n",
-    "280\n",
-    "240\n",
-    "240\n",
+    "## 2. 시험 점수\r\n",
+    "\r\n",
+    "* A반 학생들의 점수는 아래와 같고, students 리스트에 저장되어 있다.\r\n",
+    "\r\n",
+    "    * A학생(국어 100점, 수학 80점, 영어 100점)\r\n",
+    "    * B학생(국어 90점, 수학 90점, 영어 60점)\r\n",
+    "    * C학생(국어 80점, 수학 80점, 영어 80점)\r\n",
+    "\r\n",
+    "### 2-1. 학생별 출력\r\n",
+    "\r\n",
+    "* 아래의 리스트를 반복하여 `학생별 총합`을 순서대로 `출력`하시오.\r\n",
+    "\r\n",
+    "* `sum` 함수 사용 금지\r\n",
+    "\r\n",
+    "---\r\n",
+    "**[예시 입력]**\r\n",
+    "\r\n",
+    "```python\r\n",
+    "students = [\r\n",
+    " [100, 80, 100],\r\n",
+    " [90, 90, 60],\r\n",
+    " [80, 80, 80]\r\n",
+    "]\r\n",
+    "```\r\n",
+    "\r\n",
+    "**[예시 출력]**\r\n",
+    "```\r\n",
+    "280\r\n",
+    "240\r\n",
+    "240\r\n",
     "```"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "source": [
     "students = [\r\n",
     " [100, 80, 100],\r\n",
@@ -252,9 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "source": [
-    "# 아래에 풀이를 작성하세요. 함수 정의는 필요없습니다.\r\n",
     "for scores in students:\r\n",
     "    total = 0\r\n",
     "    for score in scores:\r\n",
@@ -277,34 +254,34 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 과목별 출력\n",
-    "\n",
-    "* 아래의 리스트를 반복하여 **과목별 총합**을 순서대로 `출력`하시오.\n",
-    "* `sum` 함수 사용 금지\n",
-    "\n",
-    "---\n",
-    "**예시 입력**\n",
-    "\n",
-    "```python\n",
-    "students = [\n",
-    " [100, 80, 100],\n",
-    " [90, 90, 60],\n",
-    " [80, 80, 80]\n",
-    "]\n",
-    "```\n",
-    "\n",
-    "**예시 출력**\n",
-    "```\n",
-    "270\n",
-    "250\n",
-    "240\n",
+    "### 2-2. 과목별 출력\r\n",
+    "\r\n",
+    "* 아래의 리스트를 반복하여 `과목별 총합`을 순서대로 `출력`하시오.\r\n",
+    "* `sum` 함수 사용 금지\r\n",
+    "\r\n",
+    "---\r\n",
+    "**[예시 입력]**\r\n",
+    "\r\n",
+    "```python\r\n",
+    "students = [\r\n",
+    " [100, 80, 100],\r\n",
+    " [90, 90, 60],\r\n",
+    " [80, 80, 80]\r\n",
+    "]\r\n",
+    "```\r\n",
+    "\r\n",
+    "**[예시 출력]**\r\n",
+    "```\r\n",
+    "270\r\n",
+    "250\r\n",
+    "240\r\n",
     "```"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "source": [
     "students = [\r\n",
     " [100, 80, 100],\r\n",
@@ -317,9 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "source": [
-    "# 아래에 풀이를 작성하세요. 함수 정의는 필요없습니다.\r\n",
     "for m in range(len(students)):\r\n",
     "    total = 0\r\n",
     "    for n in range(len(students[m])):\r\n",
