--- a/0727/list_practice3.ipynb
+++ b/0727/list_practice3.ipynb
@@ -3,46 +3,41 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Practice 3\n",
-    "\n",
-    "> 자료 구조 "
+    "# Practice 3\r\n",
+    "- 자료 구조 "
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## 썩은 과일 찾기\n",
-    "\n",
-    "> 과수원에 농부 한명이 썩은 과일이 몇개 들어있는 과일 봉지를 가지고 있다. (과일 봉지는 리스트를 의미한다.)\n",
-    ">\n",
-    "> 썩은 과일 조각들을 모두 신선한 것으로 교체하는 함수 `change_rotten_fruit()`를 작성하시오. \n",
-    ">\n",
-    "> 예를 들어,\n",
-    "- `['apple', 'rottenBanana', 'apple']` 이라는 리스트가 주어진 경우, 대체된 리스트는 `['apple', 'banana', 'apple']` 이어야 한다. \n",
-    ">\n",
-    ">\n",
-    "> **유의**\n",
-    "- 만약 리스트가 null/nil/None이거나 비어 있는 경우 빈 리스트를 반환한다.\n",
-    "- 반환된 리스트의 요소는 모두 소문자여야 한다.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "예시)\n",
-    "\n",
-    "```python\n",
-    "change_rotten_fruit(['apple', 'rottenBanana', 'apple']) \n",
-    "#=> ['apple', 'banana', 'apple']\n",
-    "\n",
-    "change_rotten_fruit(['rottenapple', 'rottenBanana', 'apple', 'rottenGrape']) \n",
-    "#=> ['apple', 'banana', 'apple', 'grape']\n",
+    "## 1. 썩은 과일 찾기\r\n",
+    "\r\n",
+    "- 과수원에 농부 한명이 썩은 과일이 몇개 들어있는 과일 봉지를 가지고 있다. (과일 봉지는 리스트를 의미한다.)\r\n",
+    "- 썩은 과일 조각들을 모두 신선한 것으로 교체하는 함수 `change_rotten_fruit()`를 작성하시오. \r\n",
+    "- 예를 들어,\r\n",
+    "  - `['apple', 'rottenBanana', 'apple']` 이라는 리스트가 주어진 경우, 대체된 리스트는 `['apple', 'banana', 'apple']` 이어야 한다. \r\n",
+    "- **유의**\r\n",
+    "  - 만약 리스트가 null/nil/None이거나 비어 있는 경우 빈 리스트를 반환한다.\r\n",
+    "  - 반환된 리스트의 요소는 모두 소문자여야 한다.\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "[예시]\r\n",
+    "\r\n",
+    "```python\r\n",
+    "change_rotten_fruit(['apple', 'rottenBanana', 'apple']) \r\n",
+    "#=> ['apple', 'banana', 'apple']\r\n",
+    "\r\n",
+    "change_rotten_fruit(['rottenapple', 'rottenBanana', 'apple', 'rottenGrape']) \r\n",
+    "#=> ['apple', 'banana', 'apple', 'grape']\r\n",
     "```"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "source": [
     "def change_rotten_fruit(fruit_bag):\r\n",
     "    if not fruit_bag:\r\n",
@@ -56,9 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "source": [
-    "# 해당 코드를 통해 올바른 결과가 나오는지 확인하시오.\r\n",
     "print(change_rotten_fruit(['apple', 'rottenBanana', 'apple'] ))\r\n",
     "print(change_rotten_fruit(['rottenapple', 'rottenBanana', 'apple', 'rottenGrape']))"
    ],
@@ -77,25 +71,24 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 중복되지 않은 숫자의 합\n",
-    "\n",
-    "> 같은 숫자가 한개 있거나 두개가 들어있는 리스트가 주어진다. 이러한 리스트에서 숫자가 한개만 있는 요소들의 합을 구하는 함수 `sum_of_repeat_number()`를 작성하시오.\n",
-    ">\n",
-    "> 예를 들어, `[4, 5, 7, 5, 4, 8]`는 7과 8이 한번만 나오기 때문에 두개를 더한 15가 결과값으로 도출된다.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "예시)\n",
-    "\n",
-    "```python\n",
-    "sum_of_repeat_number([4, 4, 7, 8, 10]) # => 25\n",
-    "```\n"
+    "## 2. 중복되지 않은 숫자의 합\r\n",
+    "\r\n",
+    "- 같은 숫자가 한개 있거나 두개가 들어있는 리스트가 주어진다. 이러한 리스트에서 숫자가 한개만 있는 요소들의 합을 구하는 함수 `sum_of_repeat_number()`를 작성하시오.\r\n",
+    "- 예를 들어, `[4, 5, 7, 5, 4, 8]`는 7과 8이 한번만 나오기 때문에 두개를 더한 15가 결과값으로 도출된다.\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "[예시]\r\n",
+    "\r\n",
+    "```python\r\n",
+    "sum_of_repeat_number([4, 4, 7, 8, 10]) # => 25\r\n",
+    "```\r\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "source": [
     "def sum_of_repeat_number(numbers):\r\n",
     "    uni_numbers = [number for number in numbers if numbers.count(number) < 2]\r\n",
@@ -106,7 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
+   "source": [
+    "print(sum_of_repeat_number([4, 4, 7, 8, 10]))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "source": [
     "def sum_of_repeat_number(numbers):\r\n",
     "    total = 0\r\n",
@@ -123,9 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "source": [
-    "# 해당 코드를 통해 올바른 결과가 나오는지 확인하시오.\r\n",
     "print(sum_of_repeat_number([4, 4, 7, 8, 10]))"
    ],
    "outputs": [
