--- a/0727/list_practice2.ipynb
+++ b/0727/list_practice2.ipynb
@@ -3,34 +3,33 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Practice 2\n",
-    "\n",
-    "> 자료 구조 "
+    "# Practice 2\r\n",
+    "- 자료 구조 "
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## 모든 위치\n",
-    "\n",
-    "> 주어진 문자열(text)에서 제시된 알파벳(alphabet)의 등장 위치를 리스트로 반환하시오.\n",
-    "> 해당 알파벳이 등장하지 않으면, -1을 반환하시오.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "예시)\n",
-    "\n",
-    "```python\n",
-    "print(my_find('apple', 'p')) # [1, 2]\n",
-    "print(my_find('a', 'p'))     # -1\n",
-    "```\n"
+    "## 1. 모든 위치\r\n",
+    "\r\n",
+    "- 주어진 문자열(text)에서 제시된 알파벳(alphabet)의 등장 위치를 리스트로 반환하시오.\r\n",
+    "- 해당 알파벳이 등장하지 않으면, -1을 반환하시오.\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "[예시]\r\n",
+    "\r\n",
+    "```python\r\n",
+    "print(my_find('apple', 'p')) # [1, 2]\r\n",
+    "print(my_find('a', 'p'))     # -1\r\n",
+    "```\r\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "source": [
     "def my_find(text, alphabet):\r\n",
     "    if alphabet in text:\r\n",
@@ -43,9 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "source": [
-    "# 해당 코드를 통해 올바른 결과가 나오는지 확인하시오.\r\n",
     "print(my_find('apple', 'p'))\r\n",
     "print(my_find('a', 'p'))"
    ],
@@ -64,29 +62,26 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 출석 체크\n",
-    "\n",
-    "> 주어진 학생 n과 출석한 학생명부 students 문자열이 있다. 결석한 학생들로 구성된 문자열을 반환하시오.\n",
-    ">\n",
-    "> n이 7일 때, 1 2 3 4 5 6 7의 출석 번호가 부여되고,\n",
-    ">\n",
-    "> '1 3 5'는 출석한 학생 명부이다. \n",
-    ">\n",
-    "> 즉, 결석한 학생 명부 '2 4 6 7'을 return 해야 한다.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "예시)\n",
-    "\n",
-    "```python\n",
-    "print(check(7, '1 3 5')) # 2 4 6 7\n",
-    "```\n"
+    "## 2. 출석 체크\r\n",
+    "\r\n",
+    "- 주어진 학생 n과 출석한 학생명부 students 문자열이 있다. 결석한 학생들로 구성된 문자열을 반환하시오.\r\n",
+    "- n이 7일 때, 1 2 3 4 5 6 7의 출석 번호가 부여되고,\r\n",
+    "- '1 3 5'는 출석한 학생 명부이다. \r\n",
+    "- 즉, 결석한 학생 명부 '2 4 6 7'을 return 해야 한다.\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "[예시]\r\n",
+    "\r\n",
+    "```python\r\n",
+    "print(check(7, '1 3 5')) # 2 4 6 7\r\n",
+    "```"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "source": [
     "def check(n, students):\r\n",
     "    student = list( map(int, students.split()) )\r\n",
@@ -98,9 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
-    "# 해당 코드를 통해 올바른 결과가 나오는지 확인하시오.\r\n",
     "print(check(7, '1 3 5')) # 2 4 6 7"
    ],
    "outputs": [
@@ -118,13 +112,6 @@
      "start_time": "2020-07-22T07:58:30.838924Z"
     }
    }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
   }
  ],
  "metadata": {
