--- a/0722/function_practice3.ipynb
+++ b/0722/function_practice3.ipynb
@@ -3,38 +3,35 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Practice 3\n",
-    "\n",
-    "> 자료 구조 "
+    "# Practice 3\r\n",
+    "- 자료 구조 "
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## 회문 판별\n",
-    "\n",
-    "> 회문 또는 팰린드롬은 거꾸로 읽어도 제대로 읽는 것과 같은 문장이나 낱말, 숫자, 문자열 등을 말한다. \n",
-    "> \n",
-    "> 입력으로 짧은 영어단어 word가 주어질 때, 해당 단어가 회문이면 True 회문이 아니면 False를 반환하는 함수를 작성하시오.\n",
-    "> \n",
-    "> 이때, 반복문(`while`)과 재귀 함수를 사용해서 각각 작성하시오.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "예시)\n",
-    "\n",
-    "```python\n",
-    "is_pal_while('tomato') #=> False\n",
-    "is_pal_while('racecar') #=> True\n",
-    "is_pal_recursive('azza') #=> True\n",
+    "## 1. 회문 판별\r\n",
+    "\r\n",
+    "- 회문 또는 팰린드롬은 거꾸로 읽어도 제대로 읽는 것과 같은 문장이나 낱말, 숫자, 문자열 등을 말한다. \r\n",
+    "- 입력으로 짧은 영어단어 word가 주어질 때, 해당 단어가 회문이면 True 회문이 아니면 False를 반환하는 함수를 작성하시오.\r\n",
+    "- 이때, 반복문(`while`)과 재귀 함수를 사용해서 각각 작성하시오.\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "[예시]\r\n",
+    "\r\n",
+    "```python\r\n",
+    "is_pal_while('tomato') #=> False\r\n",
+    "is_pal_while('racecar') #=> True\r\n",
+    "is_pal_recursive('azza') #=> True\r\n",
     "```"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "# while1\r\n",
     "def is_pal_while(word):\r\n",
@@ -52,6 +49,27 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "source": [
+    "print(is_pal_while('tomato'))\r\n",
+    "print(is_pal_while('racecar'))\r\n",
+    "print(is_pal_while('azza'))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "source": [
     "# while2\r\n",
     "def is_pal_while(word):\r\n",
@@ -73,7 +91,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "source": [
+    "print(is_pal_while('tomato'))\r\n",
+    "print(is_pal_while('racecar'))\r\n",
+    "print(is_pal_while('azza'))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "source": [
     "def is_pal_while(word):\r\n",
     "    while len(word) > 1:\r\n",
@@ -88,9 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "source": [
-    "# 해당 코드를 통해 올바른 결과가 나오는지 확인하시오.\r\n",
     "print(is_pal_while('tomato'))\r\n",
     "print(is_pal_while('racecar'))\r\n",
     "print(is_pal_while('azza'))"
@@ -115,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "source": [
     "# recursive\r\n",
     "def is_pal_recursive(word):\r\n",
@@ -131,7 +169,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "source": [
+    "print(is_pal_recursive('tomato'))\r\n",
+    "print(is_pal_recursive('racecar'))\r\n",
+    "print(is_pal_recursive('azza'))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "source": [
     "def is_pal_recursive(word):\r\n",
     "    # base_case\r\n",
@@ -148,9 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "source": [
-    "# 해당 코드를 통해 올바른 결과가 나오는지 확인하시오.\r\n",
     "print(is_pal_recursive('tomato'))\r\n",
     "print(is_pal_recursive('racecar'))\r\n",
     "print(is_pal_recursive('azza'))"
