--- a/0722/function_practice1.ipynb
+++ b/0722/function_practice1.ipynb
@@ -3,33 +3,33 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Practice 1\n",
-    "\n",
-    "> 함수"
+    "# Practice 1\r\n",
+    "- 함수"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## `abs()` 직접 구현하기\r\n",
+    "## 1. abs() 직접 구현하기\r\n",
     "\r\n",
-    "> 절댓값은 숫자형 자료(int, float)가 들어오면 절댓값을 반환하고, 복소수형 자료(complex)가 들어오면 해당하는 자료의 크기를 반환합니다. \r\n",
-    "> \r\n",
-    "> 파이썬 내장 함수 `abs()`를 직접 구현한 `my_abs()`를 작성하시오.\r\n",
+    "- 절댓값은 숫자형 자료(int, float)가 들어오면 절댓값을 반환하고, 복소수형 자료(complex)가 들어오면 해당하는 자료의 크기를 반환한다. \r\n",
+    "- 파이썬 내장 함수 `abs()`를 직접 구현한 `my_abs()`를 작성하시오.\r\n",
     "\r\n",
     "---\r\n",
     "\r\n",
-    "**공식문서**\r\n",
+    "**abs() 공식문서**\r\n",
+    "<center>\r\n",
+    "    <img src=\"https://user-images.githubusercontent.com/52446416/61273106-b6ee5c00-a7e3-11e9-8ec2-a086b0bc584f.png\", alt=\"\">\r\n",
+    "</center>\r\n",
     "\r\n",
-    "![이미지](\"https://user-images.githubusercontent.com/52446416/61273106-b6ee5c00-a7e3-11e9-8ec2-a086b0bc584f.png\")\r\n",
     "\r\n",
-    "**복소수 크기 구하는법**\r\n",
+    "**[참고사항]**\r\n",
     "<center>\r\n",
     "    <img src=\"https://user-images.githubusercontent.com/52446416/61273105-b655c580-a7e3-11e9-9859-0a9ffdecdf7d.png\", alt=\"\">\r\n",
     "</center>\r\n",
     "\r\n",
-    "예시)\r\n",
+    "[예시]\r\n",
     "\r\n",
     "```python\r\n",
     "my_abs(3+4j) #=> 5.0\r\n",
@@ -41,10 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "source": [
-    "# 아래에 코드를 작성하시오.\r\n",
-    "\r\n",
     "def my_abs(x):\r\n",
     "    # 복소수가 들어올 경우 정수와 대소 비교가 불가능하기 때문에, 복소수 조건문 우선 실행\r\n",
     "    if type(x) == complex:\r\n",
@@ -63,28 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
-    "def my_abs(x):\r\n",
-    "    if type(x) == complex:\r\n",
-    "        return (x.real**2 + x.imag**2) ** (1/2)\r\n",
-    "    else : \r\n",
-    "        if x == 0:\r\n",
-    "            return x**2\r\n",
-    "        if x < 0:\r\n",
-    "            return -x\r\n",
-    "        else:\r\n",
-    "            return x"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "source": [
-    "# 아래의 코드를 실행하여 출력된 결과를 확인하시오.\r\n",
-    "\r\n",
     "print(my_abs(3+4j))\r\n",
     "print(my_abs(-0.0))\r\n",
     "print(my_abs(-5))\r\n",
@@ -105,31 +83,69 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "def my_abs(x):\r\n",
+    "    if type(x) == complex:\r\n",
+    "        return (x.real**2 + x.imag**2) ** (1/2)\r\n",
+    "    else : \r\n",
+    "        if x == 0:\r\n",
+    "            return x**2\r\n",
+    "        if x < 0:\r\n",
+    "            return -x\r\n",
+    "        else:\r\n",
+    "            return x"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "print(my_abs(3+4j))\r\n",
+    "print(my_abs(-0.0))\r\n",
+    "print(my_abs(-5))\r\n",
+    "print(abs(3+4j), abs(-0.0), abs(-5))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5.0\n",
+      "0.0\n",
+      "5\n",
+      "5.0 0.0 5\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
-    "## `all()` 직접 구현하기\n",
-    "\n",
-    "> `all()`은 인자로 받는 iterable(range, list)의 모든 요소가 참이거나 비어있으면 True를 반환합니다. \n",
-    ">\n",
-    "> 파이썬 내장 함수 `all()`을 직접 구현한 `my_all()`을 작성하시오.\n",
-    "\n",
-    "\n",
-    "예시)\n",
-    "\n",
-    "```python\n",
-    "my_all([]) #=> True\n",
-    "my_all([1, 2, 5, '6']) #=> True\n",
-    "my_all([[], 2, 5, '6']) #=> False\n",
+    "## 2. all() 직접 구현하기\r\n",
+    "\r\n",
+    "- `all()`은 인자로 받는 iterable(range, list)의 모든 요소가 참이거나 비어있으면 True를 반환한다. \r\n",
+    "- 파이썬 내장 함수 `all()`을 직접 구현한 `my_all()`을 작성하시오.\r\n",
+    "\r\n",
+    "\r\n",
+    "[예시]\r\n",
+    "\r\n",
+    "```python\r\n",
+    "my_all([]) #=> True\r\n",
+    "my_all([1, 2, 5, '6']) #=> True\r\n",
+    "my_all([[], 2, 5, '6']) #=> False\r\n",
     "```"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "source": [
-    "# 아래에 코드를 작성하시오.\r\n",
-    "\r\n",
     "def my_all(elements):\r\n",
     "    # 빈 elements가 들어오면 for문 반복 불가, 따라서 기본값 True 설정\r\n",
     "    check = True\r\n",
@@ -146,7 +162,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "source": [
+    "print(my_all([]))\r\n",
+    "print(my_all([1, 2, 5, '6']))\r\n",
+    "print(my_all([[], 2, 5, '6']))\r\n",
+    "print(all([]), all([1, 2, 5, '6']), all([[], 2, 5, '6']))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True True False\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "source": [
     "# True, False가 대응되는 숫자를 활용\r\n",
     "def my_all(elements):\r\n",
@@ -162,7 +201,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "source": [
+    "print(my_all([]))\r\n",
+    "print(my_all([1, 2, 5, '6']))\r\n",
+    "print(my_all([[], 2, 5, '6']))\r\n",
+    "print(all([]), all([1, 2, 5, '6']), all([[], 2, 5, '6']))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True True False\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "source": [
     "def my_all(elements):\r\n",
     "    ans = True\r\n",
@@ -180,7 +242,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "source": [
+    "print(my_all([]))\r\n",
+    "print(my_all([1, 2, 5, '6']))\r\n",
+    "print(my_all([[], 2, 5, '6']))\r\n",
+    "print(all([]), all([1, 2, 5, '6']), all([[], 2, 5, '6']))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True True False\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "source": [
     "def my_all(elements):\r\n",
     "    for element in elements:\r\n",
@@ -194,10 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "source": [
-    "# 아래의 코드를 실행하여 출력된 결과를 확인하시오.\r\n",
-    "\r\n",
     "print(my_all([]))\r\n",
     "print(my_all([1, 2, 5, '6']))\r\n",
     "print(my_all([[], 2, 5, '6']))\r\n",
@@ -252,28 +335,25 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## `any()` 직접 구현하기\n",
-    "\n",
-    "> `any()`는 인자로 받는 iterable(range, list)의 요소 중 하나라도 참이면 True를 반환하고, 비어있으면 False를 반환합니다. \n",
-    "> \n",
-    "> 파이썬 내장 함수 `any()`을 직접 구현한 `my_any()` 함수를 작성하시오.\n",
-    "\n",
-    "예시)\n",
-    "\n",
-    "```python\n",
-    "my_any([1, 2, 5, '6']) #=> True\n",
-    "my_any([[], 2, 5, '6']) #=> True\n",
-    "my_any([0]) #=> False\n",
+    "## 3. any() 직접 구현하기\r\n",
+    "\r\n",
+    "- `any()`는 인자로 받는 iterable(range, list)의 요소 중 하나라도 참이면 True를 반환하고, 비어있으면 False를 반환한다. \r\n",
+    "- 파이썬 내장 함수 `any()`을 직접 구현한 `my_any()` 함수를 작성하시오.\r\n",
+    "\r\n",
+    "[예시]\r\n",
+    "\r\n",
+    "```python\r\n",
+    "my_any([1, 2, 5, '6']) #=> True\r\n",
+    "my_any([[], 2, 5, '6']) #=> True\r\n",
+    "my_any([0]) #=> False\r\n",
     "```"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "source": [
-    "# 아래에 코드를 작성하시오.\r\n",
-    "\r\n",
     "def my_any(elements):\r\n",
     "    # 빈 elements가 들어오면 for문 반복 불가, 따라서 기본값 False 설정\r\n",
     "    check = False\r\n",
@@ -290,7 +370,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
+   "source": [
+    "print(my_any([1, 2, 5, '6']))\r\n",
+    "print(my_any([[], 2, 5, '6']))\r\n",
+    "print(my_any([0]))\r\n",
+    "print(any([1, 2, 5, '6']), any([[], 2, 5, '6']), any([0]))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True True False\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "source": [
     "# True, False가 대응되는 숫자를 활용\r\n",
     "def my_any(elements):\r\n",
@@ -309,7 +412,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "source": [
+    "print(my_any([1, 2, 5, '6']))\r\n",
+    "print(my_any([[], 2, 5, '6']))\r\n",
+    "print(my_any([0]))\r\n",
+    "print(any([1, 2, 5, '6']), any([[], 2, 5, '6']), any([0]))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True True False\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "source": [
     "def my_any(elements):\r\n",
     "    for element in elements:\r\n",
@@ -322,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "source": [
     "print(my_any([1, 2, 5, '6']))\r\n",
     "print(my_any([[], 2, 5, '6']))\r\n",
